--- a/styles/resources_content.css
+++ b/styles/resources_content.css
@@ -97,3 +97,209 @@
 
 
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .content {
+      margin-top: 10vh; /* Adjust the value to match the height of your header */
+      margin-bottom: 50px; /* Adjust the value to match the height of your footer */
+      margin-left: 0vh; 
+      background-color: var(--color-light-background);
+      font-family: var(--main-font-family);
+      color: var(--color-dark-text);
+      flex: 1;
+      display: grid;
+    }      
+
+    .content div{
+      padding: 5px;
+    }
+    .content.sticky{
+      padding-top:0px;
+      padding-bottom: 30px;
+  }
+
+  .section{
+    margin-top: 5vh;
+    margin-left: 5vh;
+    margin-right: 5vh;
+    background-color: var(--color-light-background);
+  }
+
+  .section h2{
+    font-size: 30px;
+    justify-content: right;
+  }
+
+  .section p{
+    font-size: 18px;
+  }
+
+  .section li{
+    font-size: 18px;
+  }
+
+  .personal{
+    margin-top: 2vh;
+  }
+
+  .summary{
+    font-size: 20px;
+    line-height: 2;
+    text-align: justify;
+    margin-top: 2vh;
+  }
+
+  .education
+  {
+    display:flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  .education2
+  {
+    display:flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  .languages
+  {
+    display:flex;
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  hr {
+    border: none; /* Remove default border */
+    border-top: 2px solid var(--color-dark-text); /* Add custom border style */
+    margin: 10px 0; /* Add margin for spacing */
+}
+  .certificates{
+    margin-top: 2vh;
+  }
+
+  .skills{
+    display:flex;
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+
+  }
+
+}
+
+
+
+@media (max-width: 768px) {
+  .content {
+      margin-top: 10vh; /* Adjust the value to match the height of your header */
+      margin-bottom: 50px; /* Adjust the value to match the height of your footer */
+      margin-left: 0vh; 
+      background-color: var(--color-light-background);
+      font-family: var(--main-font-family);
+      color: var(--color-dark-text);
+      flex: 1;
+      display: grid;
+    }      
+
+    .content div{
+      padding: 5px;
+    }
+    .content.sticky{
+      padding-top:0px;
+      padding-bottom: 30px;
+  }
+
+  .section{
+    margin-top: 5vh;
+    margin-left: 5vh;
+    margin-right: 5vh;
+    background-color: var(--color-light-background);
+  }
+
+  .section h2{
+    font-size: 30px;
+    justify-content: right;
+  }
+
+  .section p{
+    font-size: 18px;
+  }
+
+  .section li{
+    font-size: 18px;
+  }
+
+  .personal{
+    margin-top: 2vh;
+  }
+
+  .summary{
+    font-size: 20px;
+    line-height: 2;
+    text-align: justify;
+    margin-top: 2vh;
+  }
+
+  .education
+  {
+    display:flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  .education2
+  {
+    display:flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  .languages
+  {
+    display:flex;
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+  }
+
+  hr {
+    border: none; /* Remove default border */
+    border-top: 2px solid var(--color-dark-text); /* Add custom border style */
+    margin: 10px 0; /* Add margin for spacing */
+}
+  .certificates{
+    margin-top: 2vh;
+  }
+
+  .skills{
+    display:flex;
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2vh;
+
+  }
+
+}
