--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,7 +7,7 @@
         width: 100%;
         background-color: var(--color-dark-background);
         height: 5vh;
-        padding: 5px;
+        padding: 10px;
         color: var(--color-light-background);
     }
 
@@ -31,37 +31,18 @@
         width: 100%;
         background-color: var(--color-dark-background);
         height: 5vh;
-        padding: 5px;
+        padding: 10px;
         color: var(--color-light-background);
     }
 
-    footer p {
-        display: flex;
-        justify-content: center; /* Horizontally center the content */
-        align-items: center; /* Vertically center the content */
-        padding: 5px;
+    footer p{
+        margin-left: 5vh;
     }
 
     footer.sticky{position: sticky;bottom: 0;}
 
-    nav {
-        display: flex; /* Use flexbox for horizontal layout */
-        justify-content: center; /* Center align the list items */
-    }
-
-    nav div {
-        display: flex;
-    }
-
-    /* Styles for the links in the navigation bar */
-    nav div a {
-        text-decoration: none; /* Remove underline from links */
-        color: var(--color-nav-text); /* Set text color */
-        font-size: 25px; /* Set font size */
-    }
-
-    nav a:hover {
-        color: var(--color-hover); /* Change text color on hover */
+    nav .social-media-icons-footer{
+        display: none;
     }
 
 }
@@ -69,13 +50,13 @@
 
 @media (max-width: 768px) {
 
+
     .footer {
         position: fixed;
         bottom: 0;
-        left: 0;
         width: 100%;
         background-color: var(--color-dark-background);
-        height: 5vh;
+        height: 7vh;
         padding: 5px;
         color: var(--color-light-background);
     }
@@ -84,19 +65,14 @@
         display: flex;
         justify-content: center; /* Horizontally center the content */
         align-items: center; /* Vertically center the content */
-        padding: 5px;
+        padding: 0px;
+        bottom:20px;
+        font-size: 22px;
+        
     }
 
     footer.sticky{position: sticky;bottom: 0;}
 
-    nav {
-        display: flex; /* Use flexbox for horizontal layout */
-        justify-content: center; /* Center align the list items */
-    }
-
-    nav div {
-        display: flex;
-    }
 
     /* Styles for the links in the navigation bar */
     nav div a {
