--- a/styles/socialmedia.css
+++ b/styles/socialmedia.css
@@ -25,17 +25,21 @@
     
     }
 
-    @media (min-width: 769px) and (max-width: 1439px) {
+    @media (min-width: 981px) and (max-width: 1439px) {
 
-        .social-media-icons-footer{
+
+        .social-media-icons{
             display: none;
+        }
+        .social-media-icons-footer{
+            display none;
         }
     
 
     }
 
 
-@media (max-width: 768px) {
+@media (max-width: 980px) {
 
     .social-media-icons-footer{
         display: none;
