size is adjusted

--- a/styles/socialmedia.css
+++ b/styles/socialmedia.css
@@ -32,7 +32,7 @@
             display: none;
         }
         .social-media-icons-footer{
-            display none;
+            display: none;
         }
     
 
