--- a/styles/header.css
+++ b/styles/header.css
@@ -73,11 +73,13 @@ display: none;
     }
 
     header {
+        margin-left: 0vh;
+        margin-right: 0vh;
         justify-content: space-between;
         align-items: center;
         background-color: var(--color-dark-background);
         color: var(--color-light-background);
-        padding: vh;
+        padding: 0vh;
         position: fixed;
         top: 0;
         left: 0;
@@ -94,16 +96,17 @@ display: none;
         width: 100%;
         background-color: var(--color-dark-background);
         color: var(--color-light-background);
-        padding: 2.5vh;
-        height: 6vh;
+        padding: 0vh;
+        height: 12vh;
     }
 
-    .homepage-mobile-phone {
+    .homepage-mobile-phone {        
+        left: 0vh;
         position: absolute;
-        justify-content: flex-start;
         align-items: center;
-        margin-top: 1.5vh;
-        left: 5vh;
+        margin-top: 4vh;
+        margin-left: 4vh;
+        margin-right: 0vh;
     }
 
     .homepage-mobile-phone a {
@@ -111,10 +114,9 @@ display: none;
     }
 
     .homepage-mobile-phone img {
-        width: 30px;
-        height: 30px;
+        width: auto;
+        height: 4vh;
         object-fit: cover;
-        border-radius: 20%;
         filter: var(--color-nav-text);
     }
 
@@ -131,13 +133,14 @@ display: none;
     /* Styles for the list items in the navigation bar */
     nav ul {
         position: absolute;
-        list-style-type: none;
-        padding: 0;
+        margin-top: 4vh;
+        margin-left: 15vh;
+        margin-right: 15vh;
         display: flex;
     }
 
     nav li {
-        margin: 0 15px;
+        margin: 0 22px;
         display: flex;
         align-items: center;
     }
@@ -146,7 +149,7 @@ display: none;
     nav a {
         text-decoration: none;
         color: var(--color-nav-text);
-        font-size: 25px;
+        font-size: 30px;
     }
 
     nav a:hover {
