--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,5 @@
 
-@media (min-width: 1440px) {
+@media (min-width: 1800px) {
 
     .header {
         position:fixed;
@@ -77,7 +77,7 @@
 
 }
 
-@media (min-width: 981px) and (max-width: 1439px) {
+@media (min-width: 981px) and (max-width: 1800px) {
     
     /* .social-media-icons {
         display: none;
@@ -174,95 +174,84 @@
 
 @media (max-width: 980px) {
 
-    .social-media-icons{
-        display: none;
-    }
+        .social-media-icons{
+            display: none;
+        }
 
-    .homepage{
-        display: none;
-    }
+        .homepage{
+            display: none;
+        }
 
-    header {
-        justify-content: space-between;
-        align-items: center;
-        background-color: var(--color-dark-background);
-        color: var(--color-light-background);
-        padding: 5vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 999;
-      }
+        .header {
+            position:relative;
+            width: 100%;
+            background-color: var(--color-dark-background);
+            color: var(--color-light-background);
+            padding: 2.5vh;
+            height: 10%;
+        }
 
-    
-    
-      nav.active {
-        display: block;
-      }
+        .parent-header
+        {
+            position:sticky;
+            margin-left:5%;
+            margin-right:5%;
+            height: 7.5vh;
+            display: flex; /* Use flexbox to center vertically and horizontally */
+            justify-content: center;
+            align-items: center;
+        }
 
-      .header {
-        position:fixed;
-        width: 100%;
-        background-color: var(--color-dark-background);
-        color: var(--color-light-background);
-        padding: 2.5vh;
-        height: 6vh;
-    }
+        .web-sections {
+            position: absolute;
+            width: 75%;
+            height: 50%;
+            bottom: 25%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .web-sections ul {
+            list-style: none;
+            display: flex;
+            margin-left: 15%;
+            margin-right: 15%;
+        }
+
+        .web-sections li {
+            margin: 0 20px;
+        }
+
+
+        .web-sections a {
+            text-decoration: none;
+            color: var(--color-light-background);
+            font-size: 1.5rem;
+        }
+        
+
+        nav.active {
+            display: block;
+        }
+
 
 
     .homepage-mobile-phone {
         position: absolute; /* Use flexbox to align items */
-        justify-content: flex-start; /* Align items to the left */
+        justify-content: left; /* Align items to the left */
         align-items: center; /* Vertically center items */
-        margin-top: 1.5vh; /* Add margin for spacing from header content */
-        left: 5vh;
+        height: auto;
+        width:6%;
+        left: 0vh;
     }
-
-    .homepage-mobile-phone a{
-        font-size: 10px;
-    }
-
     .homepage-mobile-phone img {
-        width: 30px; /* Set width of icons */
-        height: 30px; /* Set height of icons */
-        object-fit: cover; /* Preserve aspect ratio of icons */
+        width: 100%; /* Set width of icons */
+        height: 80%; /* Set height of icons */
         border-radius: 20%; /* Add border-radius for rounded icons */
         filter: var(--color-nav-text);
     }
     .menu-icon{
         display: block;
     }
-
-     /* Styles for the navigation bar */
-nav {
-    display: flex; /* Use flexbox for horizontal layout */
-    justify-content: center; /* Center align the list items */
-}
-
-/* Styles for the list items in the navigation bar */
-nav ul {
-    position: absolute;
-    list-style-type: none; /* Remove default list style */
-    padding: 0; /* Remove padding from list */
-    display: flex; /* Use flexbox for horizontal layout of list items */
-}
-
-nav li {
-    margin: 0 15px; /* Add margin between list items */
-    display: flex; /* Use flexbox for horizontal layout of list items */
-    align-items: center; /* Center align list items vertically */
-}
-
-/* Styles for the links in the navigation bar */
-nav a {
-    text-decoration: none; /* Remove underline from links */
-    color: var(--color-nav-text); /* Set text color */
-    font-size: 25px; /* Set font size */
-}
-
-nav a:hover {
-    color: var(--color-hover); /* Change text color on hover */
-}
-
 }
