--- a/styles/cv_content.css
+++ b/styles/cv_content.css
@@ -20,13 +20,10 @@
         padding-bottom: 2000px;
     }
 
-
-    
-
     .section{
       margin-top: 5vh;
-      margin-left: 33vh;
-      margin-right: 33vh;
+      margin-left: 20%;
+      margin-right: 20%;
       background-color: var(--color-light-background);
     }
   
@@ -254,11 +251,12 @@
 
 @media (max-width: 980px) {
   .content {
-      position: relative;
-      margin-top: 15vh; /* Adjust the value to match the height of your header */
-      margin-bottom: 15vh; /* Adjust the value to match the height of your footer */
-      margin-left: 2.5vh;
-      margin-right: 2.5vh;
+      position: absolute;
+      left: 10%;
+      padding-top:15%;
+      padding:5%;
+      right: auto;
+      padding-bottom: 25%;
       background-color: var(--color-light-background);
       font-family: var(--main-font-family);
       color: var(--color-dark-text);
@@ -267,7 +265,7 @@
     }      
 
   .content p {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
 
 
@@ -277,15 +275,16 @@
   }
 
   .section h2{
-    font-size: 33px;
+    font-size: 3rem;
     justify-content: right;
   }
 
   .section p{
-    font-size: 22px;
+    font-size: 2rem;
     line-height: 1.5;
     text-align: justify;
   }
+
 
 
           /*
