--- a/styles/header.css
+++ b/styles/header.css
@@ -74,6 +74,9 @@
         font-size: 1.5rem;
     }
 
+    .home-link{
+        display: none;
+    }
 
 }
 
@@ -170,6 +173,12 @@
     nav a:hover {
         color: var(--color-hover);
     }
+
+    .home-link{
+        display: none;
+      }       
+      
+  
 }
 
 @media (max-width: 980px) {
@@ -194,18 +203,15 @@
         .parent-header
         {
             position:sticky;
-            margin-left:5%;
-            margin-right:5%;
+            margin-left:2.5%;
+            margin-right:2.5%;
             height: 7.5vh;
-            display: flex; /* Use flexbox to center vertically and horizontally */
-            justify-content: center;
-            align-items: center;
         }
 
         .web-sections {
             position: absolute;
-            width: 75%;
-            height: 50%;
+            width: 100%;
+            height: 60%;
             bottom: 25%;
             display: flex;
             align-items: center;
@@ -213,21 +219,27 @@
         }
 
         .web-sections ul {
+            position: absolute;
             list-style: none;
             display: flex;
-            margin-left: 15%;
-            margin-right: 15%;
+            width: 80%;
+            justify-content: center;
+            left: 5%;
+            right: auto;
+            margin-right: 0%;
+
         }
 
         .web-sections li {
-            margin: 0 20px;
+            margin: 0 35px;
         }
 
 
         .web-sections a {
             text-decoration: none;
             color: var(--color-light-background);
-            font-size: 1.5rem;
+            font-size: 2.66rem;
+    
         }
         
 
@@ -235,22 +247,14 @@
             display: block;
         }
 
+        nav a:hover {
+            color: var(--color-hover);
+        }
+     
 
 
-    .homepage-mobile-phone {
-        position: absolute; /* Use flexbox to align items */
-        justify-content: left; /* Align items to the left */
-        align-items: center; /* Vertically center items */
-        height: auto;
-        width:6%;
-        left: 0vh;
-    }
-    .homepage-mobile-phone img {
-        width: 100%; /* Set width of icons */
-        height: 80%; /* Set height of icons */
-        border-radius: 20%; /* Add border-radius for rounded icons */
-        filter: var(--color-nav-text);
-    }
+
+  
     .menu-icon{
         display: block;
     }
