--- a/styles/cv_content.css
+++ b/styles/cv_content.css
@@ -3,13 +3,15 @@
     .content {
         margin-top: 15vh; /* Adjust the value to match the height of your header */
         margin-bottom: 80px; /* Adjust the value to match the height of your footer */
-        margin-left: 5vh;
+        margin-left: 15vh;
+        margin-right: 15vh;
         margin-bottom: 15vh;
         background-color: var(--color-light-background);
         font-family: var(--main-font-family);
         color: var(--color-dark-text);
         flex: 1;
         display: grid;
+
       }      
 
       .content div{
@@ -140,7 +142,8 @@
 }
 
 
-@media (min-width: 981px) and (max-width: 1800px) {
+
+@media (min-width: 1171px) and (max-width: 1799px) {
     
   .content {
       margin-top: 15vh; /* Adjust the value to match the height of your header */
@@ -249,7 +252,9 @@
 
 }
 
-@media (max-width: 980px) {
+
+
+@media (max-width: 1170px) {
   .content {
       position: absolute;
       left: 10%;
