--- a/styles/header.css
+++ b/styles/header.css
@@ -78,6 +78,10 @@
         display: none;
     }
 
+    .home{
+        display: none;
+    }
+
 }
 
 @media (min-width: 981px) and (max-width: 1800px) {
