--- a/styles/header.css
+++ b/styles/header.css
@@ -90,98 +90,78 @@
         display: none;
     } */
 
-    .homepage {
-        display: none;
-    }
-
-    header {
-        margin-left: 0vh;
-        margin-right: 0vh;
-        justify-content: space-between;
-        align-items: center;
-        background-color: var(--color-dark-background);
-        color: var(--color-light-background);
-        padding: 0vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 999;
-    }
-
-    nav.active {
-        display: block;
-    }
-
     .header {
-        position: fixed;
+        position:fixed;
         width: 100%;
         background-color: var(--color-dark-background);
         color: var(--color-light-background);
-        padding: 0vh;
-        height: 12vh;
+        top: 0px;
+        height: 7.5vh;
+        margin: 0;
     }
 
-    .homepage-mobile-phone {        
-        left: 0vh;
-        position: absolute;
+    header.sticky{position:sticky;top:0}
+
+
+
+    .parent-header
+    {
+        position:relative;
+        margin-left:5%;
+        margin-right:5%;
+        height: 7.5vh;
+        display: flex; /* Use flexbox to center vertically and horizontally */
+        justify-content: center;
         align-items: center;
-        margin-top: 4vh;
-        margin-left: 4vh;
-        margin-right: 0vh;
     }
 
-    .homepage-mobile-phone a {
-        font-size: 10px;
+    .homepage {
+        display: none;
+    }
+    
+    .homepage a {
+        font-size: 1.5rem;
+        text-decoration: none;
+        color: var(--color-light-backgrounds);
+    }
+    
+    .homepage-mobile-phone{
+        display: none;
     }
 
-    .homepage-mobile-phone img {
-        width: auto;
-        height: 4vh;
-        object-fit: cover;
-        filter: var(--color-nav-text);
-    }
-
-    .menu-icon {
-        display: block;
-    }
-
-    /* Styles for the navigation bar */
-    nav {
+    
+    .web-sections {
+        position: absolute;
+        width: 33%;
+        height: 50%;
+        bottom: 25%;
         display: flex;
+        align-items: center;
         justify-content: center;
     }
 
-    /* Styles for the list items in the navigation bar */
-    nav ul {
-        position: absolute;
-        margin-top: 4vh;
-        margin-left: 15vh;
-        margin-right: 15vh;
+    .web-sections ul {
+        list-style: none;
         display: flex;
+        margin-left: 15%;
+        margin-right: 15%;
     }
 
-    nav li {
-        margin: 0 22px;
-        display: flex;
-        align-items: center;
+    .web-sections li {
+        margin: 0 30px;
     }
 
-    /* Styles for the links in the navigation bar */
-    nav a {
+    .web-sections a {
         text-decoration: none;
-        color: var(--color-nav-text);
-        font-size: 30px;
-    }
-
-    nav a:hover {
-        color: var(--color-hover);
+        color: var(--color-light-background);
+        font-size: 1.5rem;
     }
 
     .home-link{
         display: none;
-      }       
-      
+    }
+
+
   
 }
 
